// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 1`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={0}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "NaN%",
      }
    }
  >
    
  </div>
  <div
    aria-valuemax={0}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "NaN%",
      }
    }
  >
    
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 2`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    
  </div>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 3`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    
  </div>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    100%
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 4`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={2}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    
  </div>
  <div
    aria-valuemax={2}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 5`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    100%
  </div>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 6`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={2}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
  <div
    aria-valuemax={2}
    aria-valuemin={0}
    aria-valuenow={0}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 7`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={2}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
  <div
    aria-valuemax={2}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`<ProgressIndicator /> Reflects the green, yellow, and red bars 8`] = `
<div
  className="stamp progress"
>
  <div
    aria-valuemax={3}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-success"
    role="progressbar"
    style={
      Object {
        "width": "33.333%",
      }
    }
  >
    34%
  </div>
  <div
    aria-valuemax={3}
    aria-valuemin={0}
    aria-valuenow={1}
    className="progress-bar progress-bar-warning"
    role="progressbar"
    style={
      Object {
        "width": "33.333%",
      }
    }
  >
    34%
  </div>
</div>
`;
